--- a/user-manager-angular/src/app/login/login.component.html
+++ b/user-manager-angular/src/app/login/login.component.html
@@ -1,16 +1,24 @@
 <div class="login-container">
   <h2>Đăng nhập</h2>
+
   <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+  <div *ngIf="validationErrors.general" class="error">{{ validationErrors.general }}</div>
+
   <form (ngSubmit)="login()">
     <div>
       <label for="username">Tên người dùng:</label>
       <input id="username" [(ngModel)]="username" name="username" required />
+      <div *ngIf="validationErrors.username" class="error">{{ validationErrors.username }}</div>
     </div>
+
     <div>
       <label for="password">Mật khẩu:</label>
       <input id="password" [(ngModel)]="password" name="password" type="password" required />
+      <div *ngIf="validationErrors.password" class="error">{{ validationErrors.password }}</div>
     </div>
+
     <button type="submit">Đăng nhập</button>
   </form>
+
   <p>Chưa có tài khoản? <a routerLink="/register">Đăng ký</a></p>
 </div>
